assets/css/style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700|Exo:100,200,300,400,500,6000,700');

/* ---------------------------------------- Colors */

.bg-color-nav {
    background-color: firebrick;
}

.bg-color-heading {
    background-color: firebrick;
}

.bg-color-product {
    background-color: lightgoldenrodyellow;
}

.bg-color-review {
    background-color: lightgoldenrodyellow;
}

.bg-color-pickup {
    background-color: lightgoldenrodyellow;
}

.bg-color-contact {
    background-color: lightgoldenrodyellow;
}

.bg-color-faq {
    background-color: lightgoldenrodyellow;
}

.bg-color-footer {
    background-color: firebrick;
}

/* ---------------------------------------- HTML */

html {
   margin: 0px;
   height: 100%;
   width: 100%;
   background-color: firebrick;
}

body {
   margin: 0px;
   min-height: 100%;
   width: 100%;
}
/* ---------------------------------------- Nav */

#nav {
    margin-left: 0;
}

.navbar .navbar-toggler {
    border: 0;
}


/* ---------------------------------------- Header */

header {
    margin: 0;
}

.heading-text {
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    color: lightgoldenrodyellow;
    text-align: center;
    padding-top: 10px;
}

.sub-heading-text {
    font-family: "Exo", sans-serif;
    font-weight: 500;
    color: lightgoldenrodyellow;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 10px;
}

/* ---------------------------------------- Products */

p {
    margin-left: 10px;
    margin-top: 0;
    margin-right: 10px;
    margin-bottom: 0;
    font-size: 18px;
}

.heading-text2 {
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    color: firebrick;
    text-align: center;
    padding-top: 10px;
}

.sub-heading-text2 {
    font-family: "Exo", sans-serif;
    font-weight: 500;
    color: firebrick;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 10px;
}

.product-section {
    padding-bottom: 5px;
}

.product {
    background-color: whitesmoke;
    font-family: "Exo", sans-serif;
    font-weight: 400;
    color: firebrick;
    text-align: center;
    margin-left: 10%;
    padding-top: 15px;
    padding-bottom: 5px;
    max-width: 80%;
}

/*-- This was taken from the Whiskey drop project in class --*/
.block-divider {
    width: 75px;
    height: 5px;
    border: 0;
    background-color:firebrick;
}

.btn-prod {
    background-color: firebrick;
    border-color: firebrick;
    border-radius: 25px;
    min-width: 75px;
    text-align: center;
    color: white;
}

.btn-prod:hover {
    background-color: white;
    border-color: firebrick;
    color: firebrick;
    text-decoration: none;
}

/* ---------------------------------------- Reviews */

.review-section {
    padding-bottom: 15px;
}

.review {
    background-color: whitesmoke;
    font-family: "Exo", sans-serif;
    font-weight: 400;
    color: firebrick;
    text-align: center;
    margin-left: 15%;
    padding-top: 15px;
    padding-bottom: 15px;
    max-width: 70%;
}

/* ---------------------------------------- Pickup locations */

.pickup-section {
    padding-bottom: 15px;
}

.location {
    text-align: center;
    padding-top: 120px;
}

.location span {
    font-family: "Exo", sans-serif;
    font-weight: 400;
    color: firebrick;
    text-align: center;
    padding-top: 0;
    padding-bottom: 0;
}

.location-img {
    background: url("../images/marketPride.webp");
    background-position: left;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 360px;
    max-height: 360px;
}

/* ----------------------------------------Special paddings/margins/text */

h1, h2, h3, h4 {
    margin: 0;
}

.uppercase {
    text-transform: uppercase;
}

.inline-block {
    display: inline-block;
}

.container-fluid {
    padding-left: 0;
}

/* ----------------------------------------Hover.css */

.hvr-sweep-to-bottom:before {
    background-color: rgba(0,0,0,0.15);
    height: 75px;
    color: whitesmoke;
}

/* ----------------------------------------Contact form */

.contact-heading {
    font-family: "Exo", sans-serif;
    font-weight: 300;
    margin-top: 15px;
    color: firebrick;
}

.center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 70%;
}

.form-control {
    color: firebrick;
}

#comments {
    resize: none;
}

.label-color {
    color: firebrick;
    margin-left: 5px;
    margin-right: 15px;
}

button[type="submit"] {
    margin-top: 15px;
    margin-bottom: 20px;
    columns: #fafafa;
    background-color: firebrick;
    border: firebrick;
    border-radius: 35px;
}

/* ---------------------------------------- FAQ */

.card {
    background-color: lightgoldenrodyellow;
    color: firebrick;
}

.mb-0 button {
    color: firebrick;
    font-weight: bold;
    text-decoration: none;
}

.mb-0 button:hover,
.mb-0 button:active {
    color: firebrick;
    font-weight: bold;
    font-style: italic;
}

/* ---------------------------------------- Footer */

footer {
    padding-top: 20px;
}

/* ---------------------------------------- Menu Items */

.menuitem {
    height: 50px;
    text-align: center;
    padding: 0 50px 0;
}

.menuitem a {
    width: 100%;
    text-decoration: none;
    color: lightgoldenrodyellow;
    height: 100px;
    font-size: 18px; 
  
}

.menuitem a i {
    padding-top: 10px;
    display: block;
    color: lightgoldenrodyellow;
    font-size: 18px;
}

/* ---------------------------------------- Image-containers */
.img1-container{
    height: 30vh;
    background: url("../images/bigBarn.webp") no-repeat bottom right fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.img2-container{
    height: 30vh;
    background: url("../images/fruitTree.webp") no-repeat bottom right fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.img3-container{
    height: 30vh;
    background: url("../images/berries.webp") no-repeat bottom right fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.img4-container{
    height: 30vh;
    background: url("../images/cowHi.webp") no-repeat top left fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.img5-container{
    height: 30vh;
    background: url("../images/red-barn-stream.webp") no-repeat bottom right fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

.img6-container{
    height: 30vh;
    background: url("../images/cowsResting.webp") no-repeat bottom right fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

@media only screen and (max-width:768px) {

    .heading-text {
        font-weight: 600;
        padding-top: 5px;
    }

    .sub-heading-text {
        font-size: 90%;
        font-weight: 500;
        padding-top: 5px;
        padding-bottom: 5px;
    }  

    .heading-text2 {
        font-weight: 600;
        padding-top: 5px;
    }

    .sub-heading-text2 {
        font-weight: 500;
        padding-top: 5px;
        padding-bottom: 10px;
    }

    .product    {
        font-size: 90%;
    }

    .product-section {
        padding-bottom: 5px;
    }

    .block-divider {
        width: 45px;
        height: 3px;
    }

    .product {
        font-size: 90%;
        font-weight: 400;
        margin-left: 10%;
        padding-top: 5px;
        padding-bottom: 5px;
    }

    .contact-heading {
        font-size: 90%;
        font-weight: 400;
        margin-top: 5px;
    }

    .center-form {
        padding-top: 5px;
        max-width: 90%;
    }

    .review-section {
        padding-bottom: 5px;
    }

    .review {
        font-size: 90%;
        font-weight: 400;
        padding-top: 10px;
        padding-bottom: 5px;
    }
    
    .pickup-section {
        padding-bottom: 5px;
    }

    .location {
        text-align: center;
        padding-top: 10px;
    }

    .location span {
        font-size: 90%;
        font-weight: 400;
    }
        
    .menuitem {
        height: 25px;
        text-align: center;
        align-items: center;
        padding: 0 20px 0;
    }

    .menuitem a {
        width: 100%;
        text-decoration: none;
        color: lightgoldenrodyellow;
        height: 50px;
        font-size: 12px;
    }

    .menuitem a i {
        padding-top: 5px;
        display: block;
        color: lightgoldenrodyellow;
        font-size: 12px;
    }


    
}

